tests/NormalTests/paczka1/small_fuzzy/29904407.err
Error in line 9: hZkDw S510 77,9
Error in line 13: hZkDw S897 26,3
